--- a/README
+++ b/README
@@ -5,3 +5,5 @@ https://github.com/rpicopter/AvrMiniCopter/wiki
 RPi folder: issue make
 Arduino foler: you will need Arduino-Makefile and Arduino libraries 1.0.5
 download https://github.com/sudar/Arduino-Makefile
+
+Build folder: work in progress
